[package]
name = "serde_garnish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0.147", features = ["derive"] }
garnish_lang_runtime = { path = "../garnish-core/runtime"}
garnish_lang_compiler = { path = "../garnish-core/compiler"}
garnish_lang_simple_data = { path = "../garnish-core/data"}
garnish_lang_traits = { path = "../garnish-core/traits"}