[package]
name = "serde_garnish"
description = "Serialization/Deserialization for use with garnish core libraries."
version = "0.2.0"
authors = ["Chad Collins <chad.collins@capitalone.com>"]
edition = "2021"
homepage = "https://github.com/garnish-lang/serde-garnish"
documentation = "https://github.com/garnish-lang/serde-garnish"
repository = "https://github.com/garnish-lang/serde-garnish"
license-file = "./LICENSE"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0.147", features = ["derive"] }
garnish_lang_traits = { version = "0.0.4-alpha" }

[dev-dependencies]
garnish_lang_runtime = { version = "0.0.4-alpha" }
garnish_lang_compiler = { version = "0.0.4-alpha" }
garnish_lang_simple_data = { version = "0.0.4-alpha" }